[gd_scene load_steps=17 format=3 uid="uid://bhm7fdjvppt8b"]

[ext_resource type="Script" uid="uid://5bt5um5g1g3p" path="res://scenes/menus/storybook/components/storybook.gd" id="1_gw8hn"]
[ext_resource type="Theme" uid="uid://rybigifrdpw6" path="res://scenes/ui_elements/components/Storybook.tres" id="1_n2i2u"]
[ext_resource type="PackedScene" uid="uid://cgtonist08yxn" path="res://scenes/menus/storybook/components/storybook_page.tscn" id="3_n2i2u"]
[ext_resource type="SpriteFrames" uid="uid://dne3cxrhbjuno" path="res://scenes/menus/storybook/components/storybook_animation.tres" id="3_y0b3i"]
[ext_resource type="Texture2D" uid="uid://bsery0guj5nq2" path="res://scenes/ui_elements/story_quest_progress/Textures/Button_Left.png" id="4_ofgxb"]
[ext_resource type="Texture2D" uid="uid://btfc401ig1o5f" path="res://scenes/ui_elements/story_quest_progress/Textures/Button_press_left.png" id="5_8qcyx"]
[ext_resource type="Texture2D" uid="uid://crs0yvjubjftu" path="res://scenes/ui_elements/story_quest_progress/Textures/Button_right.png" id="6_xkl6m"]
[ext_resource type="Texture2D" uid="uid://do3fmxcpwvwgr" path="res://scenes/ui_elements/story_quest_progress/Textures/Button_press_right.png" id="7_p0vqm"]
[ext_resource type="Texture2D" uid="uid://mhy8kouynmkv" path="res://scenes/ui_elements/story_quest_progress/Textures/button_hover_left.png" id="9_8qcyx"]
[ext_resource type="Texture2D" uid="uid://d0g7p48fbk2xa" path="res://scenes/ui_elements/story_quest_progress/Textures/button_hover_right.png" id="12_xkl6m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y0b3i"]
texture = ExtResource("5_8qcyx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qcyx"]
texture = ExtResource("4_ofgxb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nkrro"]
texture = ExtResource("9_8qcyx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xkl6m"]
texture = ExtResource("7_p0vqm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p0vqm"]
texture = ExtResource("6_xkl6m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bnrpt"]
texture = ExtResource("12_xkl6m")

[node name="Storybook" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_n2i2u")
script = ExtResource("1_gw8hn")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Background" type="Panel" parent="Panel"]
layout_mode = 2

[node name="PanelContainer" type="CenterContainer" parent="Panel/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Panel/Background/PanelContainer"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
sprite_frames = ExtResource("3_y0b3i")
animation = &"book_left"

[node name="MarginContainer" type="MarginContainer" parent="Panel/Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = -20

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0
alignment = 1

[node name="LeftPage" type="MarginContainer" parent="Panel/Background/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Background/MarginContainer/HBoxContainer/LeftPage"]
layout_mode = 2

[node name="QuestList" type="VBoxContainer" parent="Panel/Background/MarginContainer/HBoxContainer/LeftPage/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="Panel/Background/MarginContainer/HBoxContainer/LeftPage/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
focus_next = NodePath("../../../StorybookPage/VBoxContainer/PlayButton")
theme_type_variation = &"FlatButton"
text = "< back"
flat = true

[node name="StorybookPage" parent="Panel/Background/MarginContainer/HBoxContainer" instance=ExtResource("3_n2i2u")]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="Left_Button" type="Button" parent="Panel/Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.501
anchor_bottom = 0.501
offset_left = 82.0
offset_top = -49.72
offset_right = 175.0
offset_bottom = 49.28
grow_vertical = 2
theme = ExtResource("1_n2i2u")
theme_override_styles/focus = SubResource("StyleBoxTexture_y0b3i")
theme_override_styles/disabled = SubResource("StyleBoxTexture_8qcyx")
theme_override_styles/hover = SubResource("StyleBoxTexture_nkrro")
theme_override_styles/pressed = SubResource("StyleBoxTexture_y0b3i")
theme_override_styles/normal = SubResource("StyleBoxTexture_8qcyx")

[node name="Right_Button" type="Button" parent="Panel/Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.501
anchor_right = 1.0
anchor_bottom = 0.501
offset_left = -147.0
offset_top = -49.72
offset_right = -54.0
offset_bottom = 49.28
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_xkl6m")
theme_override_styles/disabled = SubResource("StyleBoxTexture_p0vqm")
theme_override_styles/hover = SubResource("StyleBoxTexture_bnrpt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xkl6m")
theme_override_styles/normal = SubResource("StyleBoxTexture_p0vqm")

[connection signal="pressed" from="Panel/Background/MarginContainer/HBoxContainer/LeftPage/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="selected" from="Panel/Background/MarginContainer/HBoxContainer/StorybookPage" to="." method="_on_storybook_page_selected"]
